--- a/package.json
+++ b/package.json
@@ -7,45 +7,47 @@
     "npm": "^5.0.0 || ^6.0.0"
   },
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "lint:custom": "eslint --ext .js,.vue ./",
-    "lint:critical": "eslint --no-eslintrc --config .eslintrc.critical.json ./src",
-    "format": "prettier './**/*.{md,json,js,css,scss,vue}' --write && eslint -o /dev/null --fix --ext .js,.vue ./ || true",
+    "format": "prettier-eslint --write '**/.*.{yml,json,js}' '**/*.{md,yml,json,js,css,scss,vue}'",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "test": "npm run test:unit && npm run test:e2e",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build --modern"
   },
   "dependencies": {
+    "core-js": "~2.6.9",
     "helloworld-lib": "file:lib/helloworld-lib.tgz",
-    "portal-vue": "~2.1.4",
-    "pwacompat": "~2.0.8",
+    "portal-vue": "~2.1.5",
+    "pwacompat": "~2.0.9",
     "register-service-worker": "~1.6.2",
     "vue": "~2.6.10",
-    "vue-router": "~3.0.6",
-    "vuetify": "~1.5.14",
+    "vue-router": "~3.0.7",
+    "vuetify": "~1.5.16",
     "vuex": "~3.1.0",
     "vuex-persistedstate": "~2.5.4",
     "vuex-router-sync": "~5.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~3.7.0",
-    "@vue/cli-plugin-e2e-nightwatch": "~3.7.0",
-    "@vue/cli-plugin-eslint": "~3.7.0",
-    "@vue/cli-plugin-pwa": "~3.7.0",
-    "@vue/cli-plugin-unit-jest": "~3.7.0",
-    "@vue/cli-service": "~3.7.0",
-    "@vue/eslint-config-airbnb": "~4.0.0",
-    "@vue/test-utils": "~1.0.0-beta.25",
+    "@babel/core": "~7.5.4",
+    "@vue/cli-plugin-babel": "~3.9.2",
+    "@vue/cli-plugin-e2e-nightwatch": "~3.9.2",
+    "@vue/cli-plugin-eslint": "~3.9.2",
+    "@vue/cli-plugin-pwa": "~3.9.0",
+    "@vue/cli-plugin-unit-jest": "~3.9.0",
+    "@vue/cli-service": "~3.9.2",
+    "@vue/eslint-config-airbnb": "~4.0.1",
+    "@vue/test-utils": "~1.0.0-beta.29",
+    "babel-eslint": "~10.0.2",
     "babel-jest": "~24.8.0",
     "eslint": "~5.16.0",
-    "eslint-config-airbnb-base": "~13.1.0",
-    "eslint-loader": "~2.1.2",
-    "eslint-plugin-import": "~2.17.2",
-    "eslint-plugin-vue": "~5.2.2",
+    "eslint-config-airbnb-base": "~13.2.0",
+    "eslint-loader": "~2.2.1",
+    "eslint-plugin-import": "~2.18.0",
+    "eslint-plugin-vue": "~5.2.3",
     "node-sass": "~4.12.0",
-    "prettier": "~1.17.1",
+    "prettier-eslint-cli": "~5.0.0",
     "sass-loader": "~7.1.0",
     "stylus": "~0.54.5",
     "stylus-loader": "~3.0.2",
